Refactoring
Began inspection profile refactoring